# VtModLdr

./: .directory  2017-03-19.kdev4  BUILDING.md  BUILDING.txt  CMakeLists.txt  README.md  equation.cpp  file.c  funcproto.h  includes.h  json.c  main.c  modop.c  profile.c  space.c  sql.c  var.c
.kdev4/: 2017-03-19.kdev4
Help/: .directory  help.aux  help.dvi  help.ps  help.tex  info.eps  warning.eps
archive/2015-04-13/: .directory  about1.psd  main.c  modlist.sqlite  resource.h  srmodload.sqlite  srmodload.txt
archive/2015-04-13/icon/: .directory  16.psd  24.psd  32.psd
archive/2015-04-13/resources/Sonic R Mod Loader/: .directory  Sonic R Mod Loader.c  Sonic R Mod Loader.rc  Sonic R Mod Loader.res  (+1 more)
archive/2015-07-15/: Copy (2) of main.c  Copy (3) of main.c  Copy of main.c  Makefile  RCa04172  RESOURCES.RES  config.json  crc32.c  funcproto.h  main.c  main.c~  manifest.xml  resource.h  resources.aps  resources.rc  srmodldr.tds  test.db
archive/2015-08-06/: BUILDING.txt  Makefile  RESOURCES.RES  asprintf.c  funcproto.h  main.c  monolithic nightmare.c  resources.rc
archive/2015-08-06/games/: sonicr.json
archive/2016-01-07/: BUGLIST.TSV  BUGS.ldb  BUILDING.txt  Makefile  crc32.c.bak  crc32_new.c.bak  funcproto.h  funcproto.h.bak  gcccompile.cmd  main.c  main.c.bak  resource.h  resource.h.bak  resources.rc  resources.rc.bak
archive/2016-01-07/oldvers/: (2015-08-11) pre-parameterization.c
archive/2016-04-12/: RESOURCES.RES  Sonic R Mod Loader.cbp  Sonic R Mod Loader.depend  Sonic R Mod Loader.layout  asprintf.c  crc32.c  error return values.txt  funcproto.h  main.c  resources.rc  srmodldr.tds
archive/2016-04-12/oldvers/: (2016-01-01) Pre-gcc.c
archive/2016-05-23/: BUGLIST.TSV  Makefile  asprintf.tds  crc32.asm  funcproto.h  main.c  resource.h  resources.rc  srmodldr.map  srmodldr.tds
archive/2016-05-23/games/: sonicr.json
archive/2016-07-27/: BUGLIST.XLS  CMakeLists.txt  SrModLdr.ilk  SrModLdr.nam  errormsgs.h  funcproto.h  includes.h  main.c
archive/2016-07-27/cmake-deps/: FindJansson.cmake
archive/2016-07-27/interface/win32/: CMakeLists.txt  dialogs.c  dpi.c  filesel.c  interface.c  interface.h  io.c  resources.rc  win32global.c  win32global.h  win32helper.h
archive/2016-07-27/shims/asprintf/: asprintf.c  asprintf.h
archive/2016-07-27/shims/crc32/: crc32.h
archive/2016-07-27/shims/zip/: extract.c
archive/2016-10-09/: CMakeLists.txt  README  errormsgs.h  funcproto.h  includes.h  main.c
archive/2016-10-09/Help/: ModLoader.7z  help.blg  help.out  help.tex
archive/2016-10-09/cmake-deps/: FindArchive.cmake  nsis.bmp:Q30lsldxJoudresxAaaqpcawXc:$DATA
archive/2016-10-09/doc/: BUGLIST.TSV  BUGLIST.XLS  BUILDING.txt  ModOps-simplified.txt  PE Conversion.txt  SQL Database.tex
archive/2016-10-09/idc2json/: idc2json.c  test.txt  whitelist.json
archive/2016-10-09/include/games/: sonicr.json
archive/2016-10-09/interface/win32/: dialogs.c  dpi.c  interface.h  resource.h  resources.RES  resources.aps  resources.rc  win32global.c  win32global.h  win32helper.h  winmanage.c
archive/2016-10-09/shims/crc32/: crc32.c
archive/2016-10-09/shims/zip/: extract.c
archive/2016-12-18/: CMakeLists.txt  TODO.txt  equation.cpp  equation.tds  errormsgs.h  file.c  funcproto.h  includes.h  json.c  main.c  modop.c  profile.c  space.c  sql.c  var.c
archive/2016-12-18/Help/: .directory  help.aux  help.out  help.tex  page.ps
archive/2016-12-18/cmake-deps/: NSIS.template.in
archive/2016-12-18/doc/: BUGLIST.XLS  BUILDING.txt  SQL Database.tex
archive/2016-12-18/tests/: Var_Compare.c
cmake-deps/: FindJansson.cmake
doc/: BUGLIST.XLS  BUILDING.txt  Merge and Split.txt  SQL Database.tex  eq parser.txt  revert.txt  todo.txt
help/: .directory  help.tex
idc2json/: README.txt  idc2json.c  whitelist.json
include/games/: sonicr.json  test.json
include/test/Mod_/: blacklisted.json  clear_existing.json  dependency.json  repl.json  variable_simple.json  wronggame.json  wrongmlver.json
include/test/_InitSeq/: test_profile.json
interface/test/: CMakeLists.txt  interface.c  interface.h  proto_checksum.c  proto_dbase_ok.c  proto_dbase_tojson.c  proto_json_checkoutput.c
interface/win32/: dialogs.c  dpi.c  filesel.c  interface.c  interface.h  io.c  resources.RES  resources.aps  resources.rc  win32global.h  win32helper.h
mods/Debug-Text-Viewer/: functions.json  imports.json  metadata.json  patches-post.json
mods/Debug-Text-Viewer/src/: init.c  stub.asm  write.c
mods/InitHook/: functions.json  metadata.json  patches.json  variables.json
mods/InitHook/src/: InitLoop.c  InitLoop.s  inject.asm
mods/Slope-Fix/: functions.json  metadata.json  variables.json
mods/Slope-Fix/src/: src.asm
mods/WidescreenHD/: functions.json  metadata.json  patches.json
mods/WidescreenHD/src/: src.asm
shims/: borland-types.h
shims/asprintf/: asprintf.c  asprintf.h
shims/crc32/: crc32.c  crc32.h
shims/zip/: extract.c  extract.h
tests/: README.txt  Test_Caller.c  genmapping_c.bat  genmapping_c_wrapper.bat  genmapping_h.bat  genmapping_h_wrapper.bat  tests.h
tests/Core/: CRC32_File_Basic.c  _InitSeq.c  asprintf_Basic.c
tests/Eq/: Eq_Parse_Int_ConstDec.c  Eq_Parse_Int_ConstHex.c
tests/Init/: _InitSeq.c  streq.c
tests/Macro/: strieq.c
tests/Mod_Check/: Mod_CheckCompat_Pass.c  Mod_CheckCompat_WrongMLVer.c  Mod_CheckConflict_Blacklist.c  Mod_CheckConflict_Pass.c  Mod_CheckDep_Fail.c  Mod_CheckDep_Pass.c
tests/Mod_GetPatchInfo/: Mod_GetPatchInfo_ClearExisting.c  Mod_GetPatchInfo_Simple.c  Mod_PatchKeyExists_Fail.c  Mod_PatchKeyExists_Pass.c
tests/Mod_Install/: Mod_Install_UnitTest_VarRepatch.c  Mod_Install_UnitTest_clear_existing.c  Mod_Install_UnitTest_repl.c  Mod_Install_UnitTest_variable_simple.c
tests/Mod_InstallPatch/: Mod_InstallPatch_ClearExisting.c  Mod_InstallPatch_Repl.c
tests/Var/: Var_Exists.c  Var_GetType.c  Var_GetType_SQL.c  Var_GetValue_SQL.c  Var_MakeEntry.c  Var_UpdateEntry.c
toolkit/: dir2json.sh
toolkit/ModGenerator/: README.txt  build.sh  functproto.hpp  json.cpp  main.cpp
toolkit/idc2whitelist/: README.txt  idc.h
(+13 files in other folders)
